# TilePad

./: .gitignore  AZURE_TRUSTED_SIGNING_GUIDE.md  CHANGELOG.md  CMakeLists.txt  ColorEdit.py  LICENSE  MainWindow.py  PixmapWidget.py  README.md  SIGNING.md  TilePad.pro  TilePad.py  coloredit.cpp  coloredit.h  main.cpp  mainwindow.cpp  mainwindow.h  paddinggenerator.cpp  paddinggenerator.h  paddingremover.cpp  paddingremover.h  pixmapdropwidget.cpp  pixmapdropwidget.h  project.cpp  project.h  setup.iss  setup.py  startupdialog.cpp  startupdialog.h  thememanager.cpp  thememanager.h  titlebar.cpp  titlebar.h
_python/: ColorEdit.py  Generator.py  PixmapWidget.py  TilePad.py  TilePad.pyw  setup.py
